# Universal-Audio-Visualizer

./: CMakeLists.txt  LICENSE
DropDown/: mainwindow.cpp  mainwindow.ui  preferences.ui
GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  preferences.h  preferences.ui
Glitter/Headers/: glitter.hpp
Glitter/Shaders/: fragment.glsl  vertex.glsl
Glitter/Sources/: main.cpp
QT/build-untitled-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
QT/build-untitled-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-c1a3dc793de20a7f16ec.json  codemodel-v2-8338c07f898873adef3a.json  index-2022-05-13T19-59-52-0198.json
QT/build-untitled-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-a2f9e7ab7214e481aa73.json  cmakeFiles-v1-2797f3031b8e537cd64c.json  index-2022-05-13T19-41-07-0094.json  target-untitled-Debug-9cc6c36e9bbace65ab00.json  target-untitled_autogen-Debug-76a15bb2676cc3e11381.json  target-untitled_autogen_timestamp_deps-Debug-0ec5b7ef500852eceb82.json
QT/build-untitled-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
QT/build-untitled-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
QT/build-untitled-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QMainWindow.889DAFFEFCE1D411.idx  QMenuBar.95C80E17453C476A.idx  QStatusBar.A5E5000B62002B71.idx  QVariant.08308B53569EF991.idx  QWidget.D16CD4EA26714FCF.idx  algorithm.063D8BF52876A76F.idx  cctype.52805B386ABB189A.idx  corecrt.h.2CD4A8AEA7DF9691.idx  corecrt_malloc.h.9976ED57D22B76F6.idx  corecrt_math.h.22351F5E5FF19875.idx  corecrt_memcpy_s.h.26963D0CE85558CC.idx  corecrt_memory.h.C0E3AC6B292009C4.idx  corecrt_search.h.18D91015B0E8FFE5.idx  corecrt_wconio.h.6D1E0180E088A79C.idx  corecrt_wctype.h.2ECF328DCA647267.idx  corecrt_wio.h.47C69EB5BCC9A7B8.idx  corecrt_wstdio.h.82C514C8C817155B.idx  corecrt_wstdlib.h.28FFD773FBD26F99.idx  corecrt_wstring.h.7F18FD37578605E5.idx  corecrt_wtime.h.A3A4C782C03B304E.idx  crtdbg.h.914BC0F63B6AB544.idx  crtdefs.h.12710431627F85E2.idx  cstdio.A326CB99589FA755.idx  cstdlib.848AC3E81AFC9F70.idx  cstring.A59B1DBEDF3006B4.idx  ctime.5AAEEF77F10650A8.idx  ctype.h.4E44C489119DCF77.idx  cwchar.C0D5774DDCDD06E9.idx  eh.h.8FBBEFFAB1D1777D.idx  exception.0154528029F6E53D.idx  float.h.97276FBC097DAA06.idx  main.cpp.6330BE06E23033C7.idx  mainwindow.cpp.C9CA90FD40052955.idx  mainwindow.h.114E5A89BE37E17D.idx  malloc.h.A5683B31997F0DE4.idx  mm_malloc.h.0461BE4765EF7F89.idx  qaction.h.6CD7A2AA30962D72.idx  qarraydata.h.12FB52D452AD8B58.idx  qarraydataops.h.73E329748D8F32E0.idx  qbytearray.h.1F98A2BCFECE5B76.idx  (+41 more)
QT/untitled/: CMakeLists.txt  mainwindow.ui.autosave
TEST/: CMakeLists.txt
Universal-Audio-Visualizer/: CMakeLists.txt  Images.qrc  Shaders.qrc  resources.rc
Universal-Audio-Visualizer/Documents/: Release Plan v4.docx
Universal-Audio-Visualizer/Headers/: AudioRecorder.h  Circle.h  Cube.h  Cylinder.h  Prism.h  Shape.h  Sphere.h  Square.h  Triangle.h  audiomacros.h  audiosystem.h  endpointmenu.h  mainwindow.h  oglwidget.h  slider.h  stdafx.h
Universal-Audio-Visualizer/Headers/Audio/: AudioMacros.h  audiocommons.h  audiointerface.h  audiorecorder.h  endpointmenu.h  endpointnotificationclient.h
Universal-Audio-Visualizer/Headers/Shapes/: Cube.h  Prism.h  Shape.h  Sphere.h
Universal-Audio-Visualizer/Shaders/: fragment.glsl  vertex.glsl
Universal-Audio-Visualizer/Sources/: AudioRecorder.cpp  audiosystem.cpp  endpointmenu.cpp  mainwindow.cpp  mainwindow.ui  oglwidget.cpp  slider.cpp  slider.ui
Universal-Audio-Visualizer/Sources/Audio/: audiocommons.cpp  audiointerface.cpp  audiorecorder.cpp  endpointmenu.cpp  endpointnotificationclient.cpp
Universal-Audio-Visualizer/Testing/: Brady.txt  Josh.txt  Liam.txt  Nick.txt  Sam.txt
Universal-Audio-Visualizer/lib/fftw/lib/: libfftw3-3.lib
qt_folder/: CMakeLists.txt
